# baidu-translate

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
lzhbaidutranslate/: __init__.py  trans.py
site/: index.html  lzhbaidutranslate.html  search.js
