[project]
name = "lzhbaidutranslate"
version = "0.1.0"
description = "封装百度翻译 API, 翻译字符串或字符串列表"
authors = [
    { name = "lzh", email = "zhhtdm@hotmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/zhhtdm/baidu-translate"
Repository = "https://github.com/zhhtdm/baidu-translate"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
